--- a/mass_editing/i18n/da.po
+++ b/mass_editing/i18n/da.po
@@ -6,16 +6,76 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 7.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-02 08:45+0100\n"
-"PO-Revision-Date: 2016-03-02 08:49+0100\n"
+"POT-Creation-Date: 2016-03-07 11:35+0100\n"
+"PO-Revision-Date: 2016-03-07 11:42+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.8.7\n"
-"Last-Translator: \n"
-"Language: da\n"
+
+#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
+msgid "Add"
+msgstr "Tilføj"
+
+#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
+msgid "Advanced"
+msgstr "Avanceret"
+
+#. module: mass_editing
+#: field:mass.editing.wizard,create_uid:0 
+#:field:mass.object,create_uid:0
+msgid "Created by"
+msgstr ""
+
+#. module: mass_editing
+#: field:mass.editing.wizard,create_date:0 
+#: field:mass.object,create_date:0
+msgid "Created on"
+msgstr ""
+
+#. module: mass_editing
+#: code:addons/mass_editing/models/mass_object.py:126
+#, python-format
+msgid "Deletion of the action record failed."
+msgstr "Sletning af aktion rekord fejlede"
+
+#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
+msgid ""
+"Display a button in the sidebar of related documents to open a composition "
+"wizard"
+msgstr ""
+
+#. module: mass_editing
+#: model:ir.model,name:mass_editing.model_ir_model_fields
+#: view:mass.object:mass_editing.view_mass_object_form
+#: field:mass.object,field_ids:0
+msgid "Fields"
+msgstr "Felter"
+
+#. module: mass_editing
+#: field:mass.editing.wizard,id:0 
+#: field:mass.object,id:0
+msgid "ID"
+msgstr ""
+
+#. module: mass_editing
+#: field:mass.editing.wizard,write_uid:0 
+#: field:mass.object,write_uid:0
+msgid "Last Updated by"
+msgstr ""
+
+#. module: mass_editing
+#: field:mass.editing.wizard,write_date:0 
+#: field:mass.object,write_date:0
+msgid "Last Updated on"
+msgstr ""
 
 #. module: mass_editing
 #: model:ir.actions.act_window,name:mass_editing.action_mass_object_form
@@ -25,49 +85,14 @@ msgid "Mass Editing"
 msgstr "Masse redigering"
 
 #. module: mass_editing
-#: view:mass.object:0
-msgid ""
-"Display a button in the sidebar of related documents to open a composition "
-"wizard"
-msgstr ""
-
-#. module: mass_editing
-#: model:_description:0
-#: model:ir.model,name:mass_editing.model_mass_editing_wizard
-msgid "mass.editing.wizard"
-msgstr ""
-
-#. module: mass_editing
-#: field:mass.object,name:0
-msgid "Name"
-msgstr "Navn"
-
-#. module: mass_editing
-#: code:addons/mass_editing/mass_editing.py:114
-#, python-format
-msgid "Deletion of the action record failed."
-msgstr "Sletning af aktion rekord fejlede"
-
-#. module: mass_editing
-#: model:_description:0 model:ir.model,name:mass_editing.model_ir_model_fields
-#: view:mass.object:0 field:mass.object,field_ids:0
-msgid "Fields"
-msgstr "Felter"
-
-#. module: mass_editing
-#: code:addons/mass_editing/mass_editing.py:80
+#: code:addons/mass_editing/models/mass_object.py:74
 #, python-format
 msgid "Mass Editing (%s)"
 msgstr "Masse redigering (%s)"
 
 #. module: mass_editing
-#: view:mass.object:0
-msgid "Object"
-msgstr "Objekt"
-
-#. module: mass_editing
-#: model:_description:0 model:ir.model,name:mass_editing.model_mass_object
-msgid "mass.object"
+#: field:mass.object,model_id:0
+msgid "Model"
 msgstr ""
 
 #. module: mass_editing
@@ -76,10 +101,32 @@ msgid "Model List"
 msgstr ""
 
 #. module: mass_editing
-#: code:addons/mass_editing/mass_editing.py:57 sql_constraint:mass.object:0
+#: field:mass.object,name:0
+msgid "Name"
+msgstr "Navn"
+
+#. module: mass_editing
+#: code:addons/mass_editing/models/mass_object.py:49
+#: sql_constraint:mass.object:0
 #, python-format
 msgid "Name must be unique!"
 msgstr "Navnet skal være entydigt!"
+
+#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
+#: view:mass.object:mass_editing.view_mass_object_tree
+msgid "Object"
+msgstr "Objekt"
+
+#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
+msgid "Remove"
+msgstr "Fjern"
+
+#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
+msgid "Remove the contextual action to use this template on related documents"
+msgstr ""
 
 #. module: mass_editing
 #: field:mass.object,ref_ir_act_window:0
@@ -87,45 +134,31 @@ msgid "Sidebar Action"
 msgstr ""
 
 #. module: mass_editing
-#: view:mass.object:0
-msgid "Remove sidebar button"
-msgstr "Fjern fra 'Flere' menuen"
-
-#. module: mass_editing
+#: view:mass.object:mass_editing.view_mass_object_form
 #: field:mass.object,ref_ir_value:0
 msgid "Sidebar Button"
 msgstr ""
 
 #. module: mass_editing
-#: field:mass.object,model_id:0
-msgid "Model"
-msgstr ""
-
-#. module: mass_editing
-#: code:addons/mass_editing/mass_editing.py:114
-#, python-format
-msgid "Warning"
-msgstr "Advarsel"
-
-#. module: mass_editing
 #: help:mass.object,ref_ir_act_window:0
 msgid ""
-"Sidebar action to make this template available on "
-"records                                                  of the related "
-"document model"
+"Sidebar action to make this template available on records                  "
+"of the related document model"
 msgstr ""
-
-#. module: mass_editing
-#: view:mass.object:0
-msgid "Add sidebar button"
-msgstr "Tilføj i 'Flere' menuen"
-
-#. module: mass_editing
-#: view:mass.object:0
-msgid "Advanced"
-msgstr "Avanceret"
 
 #. module: mass_editing
 #: help:mass.object,ref_ir_value:0
 msgid "Sidebar button to open the sidebar action"
 msgstr ""
+
+#. module: mass_editing
+#: code:addons/mass_editing/models/mass_object.py:125
+#, python-format
+msgid "Warning"
+msgstr "Advarsel"
+
+#~ msgid "Remove sidebar button"
+#~ msgstr "Fjern fra 'Flere' menuen"
+
+#~ msgid "Add sidebar button"
+#~ msgstr "Tilføj i 'Flere' menuen"
