--- a/base_export_manager/i18n/it.po
+++ b/base_export_manager/i18n/it.po
@@ -3,11 +3,12 @@
 # * base_export_manager
 # 
 # Translators:
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2014
-# Hotellook, 2014
-# Matjaž Mozetič <m.mozetic@matmoz.si>, 2016
+# Ahmet Altınışık <aaltinisik@altinkaya.com.tr>, 2015
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2011,2013
+# Florian Hatat, 2015
 # Paolo Valier, 2016
-# Rudolf Schnapka <rs@techno-flex.de>, 2016
+# Paolo Valier, 2016
+# Rudolf Schnapka <rs@techno-flex.de>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: server-tools (8.0)\n"
@@ -15,46 +16,46 @@ msgstr ""
 "POT-Creation-Date: 2016-07-28 00:59+0000\n"
 "PO-Revision-Date: 2016-07-27 23:58+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
-"Language-Team: Spanish (http://www.transifex.com/oca/OCA-server-tools-8-0/language/es/)\n"
+"Language-Team: Italian (http://www.transifex.com/oca/OCA-server-tools-8-0/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: es\n"
+"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: base_export_manager
 #: help:ir.exports,model_id:0 help:ir.exports.line,model1_id:0
 msgid "Database model to export."
-msgstr "Modelo de la base de datos a exportar."
+msgstr ""
 
 #. module: base_export_manager
 #: view:ir.exports:base_export_manager.ir_exports_form_view
 msgid "Export Profile"
-msgstr "Perfil de exportación"
+msgstr "Esporta Profilo"
 
 #. module: base_export_manager
 #: model:ir.actions.act_window,name:base_export_manager.ir_exports_action
 #: view:ir.exports:base_export_manager.ir_exports_tree_view
 #: model:ir.ui.menu,name:base_export_manager.ir_exports_menu
 msgid "Export Profiles"
-msgstr "Perfiles de exportación"
+msgstr "Esporta Profili"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:140
 #, python-format
 msgid "Field '%s' already exists"
-msgstr "El campo '%s' ya existe"
+msgstr "Il campo '%s' esiste già"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:135
 #, python-format
 msgid "Field '%s' does not exist"
-msgstr "El campo '%s' no existe"
+msgstr "Il campo '%s' non esiste"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field1_id:0
 msgid "First field"
-msgstr "Primer campo"
+msgstr ""
 
 #. module: base_export_manager
 #: field:ir.exports.line,model1_id:0
@@ -69,12 +70,12 @@ msgstr ""
 #. module: base_export_manager
 #: field:ir.exports,model_id:0
 msgid "Model"
-msgstr "Modelo"
+msgstr "Modello"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field2_id:0
 msgid "Second field"
-msgstr "Segundo campo"
+msgstr ""
 
 #. module: base_export_manager
 #: field:ir.exports.line,model2_id:0
@@ -84,12 +85,12 @@ msgstr ""
 #. module: base_export_manager
 #: field:ir.exports.line,sequence:0
 msgid "Sequence"
-msgstr "Secuencia"
+msgstr "Sequenza"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field3_id:0
 msgid "Third field"
-msgstr "Tercer campo"
+msgstr ""
 
 #. module: base_export_manager
 #: field:ir.exports.line,model3_id:0
