--- a/base_export_manager/i18n/sl.po
+++ b/base_export_manager/i18n/sl.po
@@ -3,101 +3,103 @@
 # * base_export_manager
 # 
 # Translators:
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2014
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2012
 # Hotellook, 2014
-# Matjaž Mozetič <m.mozetic@matmoz.si>, 2016
+# Jarmo Kortetjärvi <jarmo.kortetjarvi@gmail.com>, 2016
+# Matjaž Mozetič <m.mozetic@matmoz.si>, 2015-2016
 # Paolo Valier, 2016
 # Rudolf Schnapka <rs@techno-flex.de>, 2016
+# SaFi J. <safi2266@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: server-tools (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-28 00:59+0000\n"
-"PO-Revision-Date: 2016-07-27 23:58+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
-"Language-Team: Spanish (http://www.transifex.com/oca/OCA-server-tools-8-0/language/es/)\n"
+"PO-Revision-Date: 2016-07-28 05:45+0000\n"
+"Last-Translator: Matjaž Mozetič <m.mozetic@matmoz.si>\n"
+"Language-Team: Slovenian (http://www.transifex.com/oca/OCA-server-tools-8-0/language/sl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: sl\n"
+"Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
 
 #. module: base_export_manager
 #: help:ir.exports,model_id:0 help:ir.exports.line,model1_id:0
 msgid "Database model to export."
-msgstr "Modelo de la base de datos a exportar."
+msgstr "Model podatkovne baze za izvoz."
 
 #. module: base_export_manager
 #: view:ir.exports:base_export_manager.ir_exports_form_view
 msgid "Export Profile"
-msgstr "Perfil de exportación"
+msgstr "Izvozni profil"
 
 #. module: base_export_manager
 #: model:ir.actions.act_window,name:base_export_manager.ir_exports_action
 #: view:ir.exports:base_export_manager.ir_exports_tree_view
 #: model:ir.ui.menu,name:base_export_manager.ir_exports_menu
 msgid "Export Profiles"
-msgstr "Perfiles de exportación"
+msgstr "Izvozni profili"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:140
 #, python-format
 msgid "Field '%s' already exists"
-msgstr "El campo '%s' ya existe"
+msgstr "Polje '%s' že obstaja"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:135
 #, python-format
 msgid "Field '%s' does not exist"
-msgstr "El campo '%s' no existe"
+msgstr "Polje '%s' ne obstaja"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field1_id:0
 msgid "First field"
-msgstr "Primer campo"
+msgstr "Prvo polje"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model1_id:0
 msgid "First model"
-msgstr ""
+msgstr "Prvi model"
 
 #. module: base_export_manager
 #: field:ir.exports.line,label:0
 msgid "Label"
-msgstr ""
+msgstr "Oznaka"
 
 #. module: base_export_manager
 #: field:ir.exports,model_id:0
 msgid "Model"
-msgstr "Modelo"
+msgstr "Model"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field2_id:0
 msgid "Second field"
-msgstr "Segundo campo"
+msgstr "Drugo polje"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model2_id:0
 msgid "Second model"
-msgstr ""
+msgstr "Drugi model"
 
 #. module: base_export_manager
 #: field:ir.exports.line,sequence:0
 msgid "Sequence"
-msgstr "Secuencia"
+msgstr "Zaporedje"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field3_id:0
 msgid "Third field"
-msgstr "Tercer campo"
+msgstr "Tretje polje"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model3_id:0
 msgid "Third model"
-msgstr ""
+msgstr "Tretji model"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports.py:66
 #, python-format
 msgid "You must supply a model or resource."
-msgstr ""
+msgstr "Določiti morate model vira."
