--- a/base_export_manager/i18n/da.po
+++ b/base_export_manager/i18n/da.po
@@ -3,100 +3,101 @@
 # * base_export_manager
 # 
 # Translators:
+# Hans Henrik Gabelgaard <hhg@gabelgaard.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: server-tools (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-28 21:28+0000\n"
-"PO-Revision-Date: 2016-10-18 10:57+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>\n"
-"Language-Team: Danish (http://www.transifex.com/oca/OCA-server-tools-8-0/language/da/)\n"
+"POT-Creation-Date: 2017-09-12 06:45+0000\n"
+"PO-Revision-Date: 2017-09-12 12:31+0000\n"
+"Last-Translator: Hans Henrik Gabelgaard <hhg@gabelgaard.org>\n"
+"Language-Team: Danish (Denmark) (http://www.transifex.com/oca/OCA-server-tools-8-0/language/da_DK/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: da\n"
+"Language: da_DK\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: base_export_manager
 #: help:ir.exports,model_id:0 help:ir.exports.line,model1_id:0
 msgid "Database model to export."
-msgstr ""
+msgstr "Database model for export."
 
 #. module: base_export_manager
 #: view:ir.exports:base_export_manager.ir_exports_form_view
 msgid "Export Profile"
-msgstr ""
+msgstr "Export Profil"
 
 #. module: base_export_manager
 #: model:ir.actions.act_window,name:base_export_manager.ir_exports_action
 #: view:ir.exports:base_export_manager.ir_exports_tree_view
 #: model:ir.ui.menu,name:base_export_manager.ir_exports_menu
 msgid "Export Profiles"
-msgstr ""
+msgstr "Export Profiler"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:164
 #, python-format
 msgid "Field '%s' already exists"
-msgstr ""
+msgstr "Felt '%s' findes allerede"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:158
 #, python-format
 msgid "Field '%s' does not exist"
-msgstr ""
+msgstr "Felt '%s' findes ikke"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:192
 #, python-format
 msgid "Field '%s' not found in model '%s'"
-msgstr ""
+msgstr "Felt '%s' findes ikke i model '%s'"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field1_id:0
 msgid "First field"
-msgstr ""
+msgstr "Første felt"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model1_id:0
 msgid "First model"
-msgstr ""
+msgstr "Første model"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field4_id:0
 msgid "Fourth field"
-msgstr ""
+msgstr "Fjerde felt"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model4_id:0
 msgid "Fourth model"
-msgstr ""
+msgstr "Fjerde model"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports_line.py:136
 #, python-format
 msgid "It's not allowed to have more than 4 levels depth: %s"
-msgstr ""
+msgstr "Mere end 4 niveauer ikke tilladt: %s"
 
 #. module: base_export_manager
 #: field:ir.exports.line,label:0
 msgid "Label"
-msgstr ""
+msgstr "Etiket"
 
 #. module: base_export_manager
 #: field:ir.exports,model_id:0
 msgid "Model"
-msgstr ""
+msgstr "Model"
 
 #. module: base_export_manager
 #: field:ir.exports.line,field2_id:0
 msgid "Second field"
-msgstr ""
+msgstr "Andet felt"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model2_id:0
 msgid "Second model"
-msgstr ""
+msgstr "Anden model"
 
 #. module: base_export_manager
 #: field:ir.exports.line,sequence:0
@@ -106,15 +107,15 @@ msgstr "Rækkefølge"
 #. module: base_export_manager
 #: field:ir.exports.line,field3_id:0
 msgid "Third field"
-msgstr ""
+msgstr "Tredje felt"
 
 #. module: base_export_manager
 #: field:ir.exports.line,model3_id:0
 msgid "Third model"
-msgstr ""
+msgstr "Tredje model"
 
 #. module: base_export_manager
 #: code:addons/base_export_manager/models/ir_exports.py:66
 #, python-format
 msgid "You must supply a model or resource."
-msgstr ""
+msgstr "Du må angive en model eller ressource"
